// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup render() can select a different item 1`] = `
<div
  name="radio"
  role="radiogroup"
>
  <RadioLineItem
    aria-checked={false}
    index={0}
    key="0"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <RadioLineButton />
    <RadioLineText>
      Choice One
    </RadioLineText>
  </RadioLineItem>
  <RadioLineItem
    aria-checked={false}
    index={1}
    key="1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <RadioLineButton />
    <RadioLineText>
      Choice Two
    </RadioLineText>
  </RadioLineItem>
  <RadioLineItem
    aria-checked={true}
    index={2}
    key="2"
    onClick={[Function]}
    role="radio"
    tabIndex={0}
  >
    <RadioLineButton>
      <RadioLineButtonFill
        animate={true}
      />
    </RadioLineButton>
    <RadioLineText>
      Choice Three
    </RadioLineText>
  </RadioLineItem>
</div>
`;

exports[`RadioGroup render() renders 1`] = `
<div
  name="radio"
  role="radiogroup"
>
  <RadioLineItem
    aria-checked={true}
    index={0}
    key="0"
    onClick={[Function]}
    role="radio"
    tabIndex={0}
  >
    <RadioLineButton>
      <RadioLineButtonFill
        animate={true}
      />
    </RadioLineButton>
    <RadioLineText>
      Choice One
    </RadioLineText>
  </RadioLineItem>
  <RadioLineItem
    aria-checked={false}
    index={1}
    key="1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <RadioLineButton />
    <RadioLineText>
      Choice Two
    </RadioLineText>
  </RadioLineItem>
  <RadioLineItem
    aria-checked={false}
    index={2}
    key="2"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <RadioLineButton />
    <RadioLineText>
      Choice Three
    </RadioLineText>
  </RadioLineItem>
</div>
`;

exports[`RadioGroup render() renders disabled 1`] = `
<RadioGroup
  choices={
    Array [
      Array [
        "choice_one",
        "Choice One",
      ],
    ]
  }
  disabled={true}
  name="radio"
  value="choice_one"
>
  <div
    name="radio"
    role="radiogroup"
  >
    <RadioLineItem
      aria-checked={true}
      disabled={true}
      index={0}
      key="0"
      onClick={[Function]}
      role="radio"
      tabIndex={0}
    >
      <Component
        aria-checked={true}
        className="css-ljul1a-RadioLineItem e70st6o1"
        disabled={true}
        index={0}
        onClick={[Function]}
        role="radio"
        tabIndex={0}
      >
        <div
          aria-checked={true}
          className="css-ljul1a-RadioLineItem e70st6o1"
          index={0}
          onClick={[Function]}
          role="radio"
          tabIndex={0}
        >
          <RadioLineButton>
            <div
              className="css-18yerb2-RadioLineButton e70st6o0"
            >
              <RadioLineButtonFill
                animate={true}
                disabled={true}
              >
                <Component
                  animate={true}
                  className="css-18ziuuc-RadioLineButtonFill e70st6o2"
                  disabled={true}
                >
                  <div
                    className="css-18ziuuc-RadioLineButtonFill e70st6o2"
                  />
                </Component>
              </RadioLineButtonFill>
            </div>
          </RadioLineButton>
          <RadioLineText
            disabled={true}
          >
            <Component
              className="css-fr9tlv-RadioLineText e70st6o3"
              disabled={true}
            >
              <div
                className="css-fr9tlv-RadioLineText e70st6o3"
              >
                Choice One
              </div>
            </Component>
          </RadioLineText>
        </div>
      </Component>
    </RadioLineItem>
  </div>
</RadioGroup>
`;
